--- a/Playwright.BrowserDownloader/Playwright.BrowserDownloader.csproj
+++ b/Playwright.BrowserDownloader/Playwright.BrowserDownloader.csproj
@@ -30,7 +30,14 @@
     <PackageReadmeFile>Readme.md</PackageReadmeFile>
   </PropertyGroup>
   <ItemGroup>
-    <None Include="packageicon.png" Pack="true" PackagePath="\" />
+    <None Include="..\Art\packageicon.png">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+    <None Include="..\Readme.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="System.Text.Json" Version="7.0.2" />
