--- a/Playwright.BrowserDownloader/Playwright.BrowserDownloader.csproj
+++ b/Playwright.BrowserDownloader/Playwright.BrowserDownloader.csproj
@@ -3,21 +3,21 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
     <Nullable>enable</Nullable>
-    <LangVersion>11.0</LangVersion>    
+    <LangVersion>preview</LangVersion>
   </PropertyGroup>
-
 
   <!-- NuGet -->
   <PropertyGroup>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
-    <AssemblyVersion>0.1.0</AssemblyVersion>
-    <AssemblyFileVersion>0.1.0</AssemblyFileVersion>
-    <Version>0.1.0</Version>
+    <AssemblyVersion>0.1.1</AssemblyVersion>
+    <AssemblyFileVersion>0.1.1</AssemblyFileVersion>
+    <Version>0.1.1</Version>
     <Title>nor0x.Playwright.BrowserDownloader</Title>
     <PackageId>nor0x.Playwright.BrowserDownloader</PackageId>
     <PackageReleaseNotes>https://github.com/nor0x/Playwright.BrowserDownloader/releases</PackageReleaseNotes>
     <PackageProjectUrl>https://github.com/nor0x/Playwright.BrowserDownloader</PackageProjectUrl>
-    <PackageIconUrl>https://raw.githubusercontent.com/nor0x/Playwright.BrowserDownloader/main/art/packageicon.png</PackageIconUrl>
+    <PackageIconUrl>
+      https://raw.githubusercontent.com/nor0x/Playwright.BrowserDownloader/main/art/packageicon.png</PackageIconUrl>
     <PackageIcon>packageicon.png</PackageIcon>
     <RepositoryUrl>https://github.com/nor0x/Playwright.BrowserDownloader</RepositoryUrl>
     <PackageTags>playwright, chrome, firefox, webkit, headless</PackageTags>
@@ -40,7 +40,8 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="System.Text.Json" Version="7.0.2" />
+    <PackageReference Include="System.Text.Json"
+                      Version="7.0.2" />
   </ItemGroup>
 
   <ItemGroup>
