--- a/Sample/Sample.csproj
+++ b/Sample/Sample.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Playwright" Version="1.43.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Playwright.BrowserDownloader\Playwright.BrowserDownloader.csproj" />
   </ItemGroup>
 
