--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -44,6 +44,12 @@ jobs:
           gh-user: nor0x
           # access token
           token: ${{ secrets.GITHUB_TOKEN }}
+      - uses: rickstaa/action-create-tag@v1
+        id: "tag_create"
+        with:
+          tag: ${{ steps.get_version.outputs.CURRENT_VERSION }}
+          tag_exists_error: false
+          message: ${{ github.event.repository.full_name }}@${{ github.sha }}
       - name: Create a GitHub release
         uses: ncipollo/release-action@v1
         with:
