back to 🪟 with custom action

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
       - uses: actions/checkout@v2
       - name: Get Version via powershell
@@ -44,12 +44,12 @@ jobs:
           gh-user: nor0x
           # access token
           token: ${{ secrets.GITHUB_TOKEN }}
-      - uses: rickstaa/action-create-tag@v1
-        id: "tag_create"
+      - name: Create GitHub Tag
+        uses: mathieudutour/github-tag-action@v6.2
         with:
-          tag: ${{ steps.get_version.outputs.CURRENT_VERSION }}
-          tag_exists_error: false
-          message: ${{ github.event.repository.full_name }}@${{ github.sha }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          default_bump: false
+          custom_tag: ${{ steps.get_version.outputs.CURRENT_VERSION }}
       - name: Create a GitHub release
         uses: ncipollo/release-action@v1
         with:
