--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -45,6 +45,7 @@ jobs:
           # access token
           token: ${{ secrets.GITHUB_TOKEN }}
       - name: Create GitHub Tag
+        id: tag_version
         uses: mathieudutour/github-tag-action@v6.2
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
@@ -53,6 +54,7 @@ jobs:
       - name: Create a GitHub release
         uses: ncipollo/release-action@v1
         with:
+          tag: ${{ steps.tag_version.outputs.new_tag }}
           commit: 'main'
           name: Release ${{ steps.get_version.outputs.CURRENT_VERSION }}
           body: |
