--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -31,6 +31,7 @@ jobs:
           PROJECT_FILE_PATH: Playwright.BrowserDownloader/Playwright.BrowserDownloader.csproj
           # API key to authenticate with NuGet server
           NUGET_KEY: ${{secrets.NUGET_API_KEY}}
+          TAG_COMMIT: false
       - name: Push Nupkg to GitHub Packages
         # You may pin to the exact commit or the version.
         # uses: tanaka-takayoshi/nuget-publish-to-github-packages-action@462b6006e5c90f732d030b0ace2c3e7ee9d550bc
