--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -13,6 +13,26 @@ jobs:
         run: |
           $version = [System.Version]::Parse((Get-Content Playwright.BrowserDownloader/Playwright.BrowserDownloader.csproj | Select-String -Pattern "<Version>(.*)</Version>").Matches.Groups[1].Value)
           $env:CURRENT_VERSION = $version.ToString()
+      - name: Log Current Version
+        run: |
+          echo "Current Version: ${{ env.CURRENT_VERSION }}"
+          echo "Current Version: ${{ steps.get_version.outputs.CURRENT_VERSION }}"
+      - name: Create GitHub Tag
+        id: tag_version
+        uses: mathieudutour/github-tag-action@v6.2
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          default_bump: false
+          custom_tag: ${{ steps.get_version.outputs.CURRENT_VERSION }}
+      - name: Create a GitHub release
+        uses: ncipollo/release-action@v1
+        with:
+          tag: ${{ steps.tag_version.outputs.new_tag }}
+          name: Release ${{ steps.get_version.outputs.CURRENT_VERSION }}
+          body: |
+            # Release ${{ steps.get_version.outputs.CURRENT_VERSION }}
+            This release is based on the commit: ${{ github.event.repository.full_name }}@${{ github.sha }}.
+
       - name: Setup .NET
         uses: actions/setup-dotnet@v1
         with:
@@ -45,18 +65,3 @@ jobs:
           gh-user: nor0x
           # access token
           token: ${{ secrets.GITHUB_TOKEN }}
-      - name: Create GitHub Tag
-        id: tag_version
-        uses: mathieudutour/github-tag-action@v6.2
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          default_bump: false
-          custom_tag: ${{ steps.get_version.outputs.CURRENT_VERSION }}
-      - name: Create a GitHub release
-        uses: ncipollo/release-action@v1
-        with:
-          tag: ${{ steps.tag_version.outputs.new_tag }}
-          name: Release ${{ steps.get_version.outputs.CURRENT_VERSION }}
-          body: |
-            # Release ${{ steps.get_version.outputs.CURRENT_VERSION }}
-            This release is based on the commit: ${{ github.event.repository.full_name }}@${{ github.sha }}.
